-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
6.6
-
None
-
-
c8cd9017f (dev), 81f9c77c3 (6.6), 4a6eb5903 (tqtc/lts-6.5)
Hi vestbo,
do you remember the Apple category problem with QtExtras? If this and all other categories are not packed in a namespace, it will result in a crash if many plugins running Qt with different Qt versions. We discussed that problem last year.
You can read more here : QTBUG-100059
Now, a new category raised in Qt called "QtSandboxHelpers".
File : src/corelib/kernel/qcore_mac_p.h
To fix it the same strategy can be used again
Old
// @compatibility_alias doesn't work with categories or their methods
#define QtExtras QT_MANGLE_NAMESPACE(QtExtras)
New
// @compatibility_alias doesn't work with categories or their methods
#define QtExtras QT_MANGLE_NAMESPACE(QtExtras)
#define QtSandboxHelpers QT_MANGLE_NAMESPACE(QtSandboxHelpers)
Thank you,
Michael.
- relates to
-
QTBUG-100059 Objective-C usage can result in undefined behavior
-
- Closed
-