Apple: Use namespaced category name sandbox helper

Pick-to: 6.5
Fixes: QTBUG-119338
Change-Id: I8a62b3fff0c1f3de2b6ae3332f6a1ecc7b1561e5
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>
(cherry picked from commit c8cd9017f6c9696d79c3e7b7f0b71748839c263f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>